--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
     "apexcharts": "^3.36.3",
+    "axios": "^1.1.3",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^7.6.5",
     "react": "^18.2.0",
